feat(domains): recipes
