# src/express/routers/recipes.ts
@@ -1,0 +1,9 @@
+import { Router } from 'express';
+import { getIngredientsCtr, searchIngredientsCtr } from '../controllers';
+
+const recipes = Router();
+
+recipes.get('/ingredients', getIngredientsCtr);
+recipes.get('/ingredients-search', searchIngredientsCtr);
+
+export { recipes };
